сверстал блок services

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                 About Us
             </div>
             <div class="about__text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam,
             </div>
             <div class="about__items">
                 <div class="about__item">
@@ -88,6 +89,109 @@
                     </div>
                     <div class="about__item_text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="services">
+        <div class="container">
+            <div class="services__title">
+                Our Services
+            </div>
+            <div class="services__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam,
+            </div>
+            <div class="services__items">
+                <div class="services__item">
+                    <div class="services__item-image">
+
+                    </div>
+                    <div class="services__item-title">
+                        Research
+                    </div>
+                    <div class="services__item-text">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                        iti atque corrupti quos.
+                    </div>
+                    <div class="services__item-btn">
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="services__item">
+                    <div class="services__item-image">
+
+                    </div>
+                    <div class="services__item-title">
+                        Portfolio
+                    </div>
+                    <div class="services__item-text">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                        iti atque corrupti quos.
+                    </div>
+                    <div class="services__item-btn">
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="services__item">
+                    <div class="services__item-image">
+
+                    </div>
+                    <div class="services__item-title">
+                        Support
+                    </div>
+                    <div class="services__item-text">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                        iti atque corrupti quos.
+                    </div>
+                    <div class="services__item-btn">
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="services__item">
+                    <div class="services__item-image">
+
+                    </div>
+                    <div class="services__item-title">
+                        Documentation
+                    </div>
+                    <div class="services__item-text">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                        iti atque corrupti quos.
+                    </div>
+                    <div class="services__item-btn">
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="services__item">
+                    <div class="services__item-image">
+
+                    </div>
+                    <div class="services__item-title">
+                        Development
+                    </div>
+                    <div class="services__item-text">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                        iti atque corrupti quos.
+                    </div>
+                    <div class="services__item-btn">
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="services__item">
+                    <div class="services__item-image">
+
+                    </div>
+                    <div class="services__item-title">
+                        Design
+                    </div>
+                    <div class="services__item-text">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                        iti atque corrupti quos.
+                    </div>
+                    <div class="services__item-btn">
+                        <a href="#">Read More</a>
                     </div>
                 </div>
             </div>
