Сверстал секцию works

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
     </header>
-    <div class="about">
+    <section class="about">
         <div class="container">
             <div class="about__title">
                 About Us
@@ -93,8 +93,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="services">
+    </section>
+    <section class="services">
         <div class="container">
             <div class="services__title">
                 Our Services
@@ -196,7 +196,87 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+    <section class="works">
+        <div class="container">
+            <div class="works__title">
+                Latest Works
+            </div>
+            <div class="works__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam,
+            </div>
+            <div class="works__btn-inner">
+                <a href="#" class="works__btn">
+                    ALL
+                </a>
+                <a href="#" class="works__btn">
+                    WEB DESIGN
+                </a>
+                <a href="#" class="works__btn">
+                    UI/UX DESIGN
+                </a>
+                <a href="#" class="works__btn">
+                    MOCKUPS
+                </a>
+            </div>
+            <div class="works__items">
+                <div class="works__item">
+                    <a href="#">
+                        <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
+                                design</span>
+                        </p>
+                        <img src="img/item_1.png" alt="">
+                    </a>
+                </div>
+                <div class="works__item">
+                    <a href="#">
+                        <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
+                                design</span>
+                        </p>
+                        <img src="img/item_2.png" alt="">
+                    </a>
+                </div>
+                <div class="works__item">
+                    <a href="#">
+                        <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
+                                design</span>
+                        </p>
+                        <img src="img/item_3.png" alt="">
+                    </a>
+                </div>
+                <div class="works__item">
+                    <a href="#">
+                        <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
+                                design</span>
+                        </p>
+                        <img src="img/item_4.png" alt="">
+                    </a>
+                </div>
+                <div class="works__item">
+                    <a href="#">
+                        <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
+                                design</span>
+                        </p>
+                        <img src="img/item_5.png" alt="">
+                    </a>
+                </div>
+                <div class="works__item">
+                    <a href="#">
+                        <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
+                                design</span>
+                        </p>
+                        <img src="img/item_6.png" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="works__btn-bottom-wrapper">
+                <a href="#" class="works__btn-bottom">
+                    VIEW All
+                </a>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
