сверстал секцию Pricing Plan

--- a/index.html
+++ b/index.html
@@ -277,6 +277,79 @@
             </div>
         </div>
     </section>
+    <section class="pricing">
+        <div class="container">
+            <div class="pricing__title">
+                Pricing Plan
+            </div>
+            <div class="pricing__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam,
+            </div>
+            <div class="pricing__plans">
+                <div class="pricing__plan">
+                    <div class="pricing__plan-title">
+                        <div class="pricing__name">
+                            Free Trail
+                        </div>
+                        <div class="pricing__price">
+                            <span class="pricing__price-currency">$</span>00<span
+                                class="pricing__price-time-interval">per month</span>
+                        </div>
+                    </div>
+                    <ul class="pricing__list">
+                        <li>30 Free Trail</li>
+                        <li>5 Free Projects</li>
+                        <li>PHP 5 Enabled</li>
+                        <li>24/7 Support</li>
+                    </ul>
+                    <a href="#" class="pricing__btn">
+                        order now
+                    </a>
+                </div>
+                <div class="pricing__plan">
+                    <div class="pricing__plan-title">
+                        <div class="pricing__name">
+                            Basic
+                        </div>
+                        <div class="pricing__price">
+                            <span class="pricing__price-currency">$</span>50<span
+                                class="pricing__price-time-interval">per month</span>
+                        </div>
+                    </div>
+                    <ul class="pricing__list">
+                        <li>30 Free Trail</li>
+                        <li>5 Free Projects</li>
+                        <li>PHP 5 Enabled</li>
+                        <li>24/7 Support</li>
+                    </ul>
+                    <a href="#" class="pricing__btn">
+                        order now
+                    </a>
+                </div>
+                <div class="pricing__plan">
+                    <div class="pricing__plan-title">
+                        <div class="pricing__name">
+                            Ultimate
+                        </div>
+                        <div class="pricing__price">
+                            <span class="pricing__price-currency">$</span>99<span
+                                class="pricing__price-time-interval">per month</span>
+                        </div>
+                    </div>
+                    <ul class="pricing__list">
+                        <li>30 Free Trail</li>
+                        <li>5 Free Projects</li>
+                        <li>PHP 5 Enabled</li>
+                        <li>24/7 Support</li>
+                    </ul>
+                    <a href="#" class="pricing__btn">
+                        order now
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
