--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
             <article>
                 <img src="img/blog_1.png" alt="" class="blog__img">
                 <div class="blog__content">
-                        <h3><a href="#"> SEO Quis Vestibulum</a></h3>
+                    <h3><a href="#"> SEO Quis Vestibulum</a></h3>
                     <div class="blog__date-category">
                         <p class="blog__date"><i class="fas fa-calendar-alt"></i>14.07.2017</p>
                         <p class="blog__category"><i class="far fa-file"></i>Development</p>
@@ -562,7 +562,7 @@
             </article>
             <article>
                 <div class="blog__content">
-                        <h3><a href="#"> SEO Quis Vestibulum</a></h3>
+                    <h3><a href="#"> SEO Quis Vestibulum</a></h3>
                     <div class="blog__date-category">
                         <p class="blog__date"><i class="fas fa-calendar-alt"></i>14.07.2017</p>
                         <p class="blog__category"><i class="far fa-file"></i>Development</p>
@@ -589,6 +589,53 @@
                 </div>
             </article>
             <a href="#" class="blog__btn">more view</a>
+        </div>
+    </section>
+    <section class="contact-us">
+        <div class="container">
+            <div class="contact-us__title white">
+                Contact Us
+            </div>
+            <div class="contact-us__text white">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam,
+            </div>
+            <div class="contact-us__contacts-wrapper">
+                <div class="contact-us__address">
+                    <div class="contact-us__address-icon">
+                            <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <div class="contact-us__address-text">
+                        Podbelsky-street Bratsk Russia
+                    </div>
+                </div>
+                <div class="contact-us__phone">
+                    <div class="contact-us__phone-icon">
+                            <i class="fas fa-phone-alt"></i>
+                    </div>
+                    <div class="contact-us__phone-text">
+
+                    </div>
+                </div>
+                <div class="contact-us__mail">
+                    <div class="contact-us__mail-icon">
+                            <i class="fas fa-envelope"></i>
+                    </div>
+                    <div class="contact-us__mail-text">
+
+                    </div>
+                </div>
+            </div>
+            <form action="" class="form">
+                <div class="input-wrapper">
+                    <input type="text">
+                    <input type="text">
+                </div>
+                <textarea>
+
+                </textarea>
+                <button type="submit">send</button>
+            </form>
         </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
