finish layout desktop

--- a/index.html
+++ b/index.html
@@ -603,40 +603,44 @@
             <div class="contact-us__contacts-wrapper">
                 <div class="contact-us__address">
                     <div class="contact-us__address-icon">
-                            <i class="fas fa-map-marker-alt"></i>
+                        <i class="fas fa-map-marker-alt"></i>
                     </div>
-                    <div class="contact-us__address-text">
-                        Podbelsky-street Bratsk Russia
+                    <div class="contact-us__address-text white">
+                        <p>Podbelsky-street Bratsk</p>
+                        <p>Russia</p>
                     </div>
                 </div>
                 <div class="contact-us__phone">
                     <div class="contact-us__phone-icon">
-                            <i class="fas fa-phone-alt"></i>
+                        <i class="fas fa-phone-alt"></i>
                     </div>
-                    <div class="contact-us__phone-text">
-
+                    <div class="contact-us__phone-text white">
+                        <p>+8801743331996</p>
+                        <p>+8801928737807</p>
                     </div>
                 </div>
                 <div class="contact-us__mail">
                     <div class="contact-us__mail-icon">
-                            <i class="fas fa-envelope"></i>
+                        <i class="fas fa-envelope"></i>
                     </div>
-                    <div class="contact-us__mail-text">
-
+                    <div class="contact-us__mail-text white">
+                        <p>quickmaster@gmail.com</p>
+                        <p>quickmaster@yahoo.com</p>
                     </div>
                 </div>
             </div>
             <form action="" class="form">
                 <div class="input-wrapper">
-                    <input type="text">
-                    <input type="text">
+                    <input type="text" placeholder="Your name">
+                    <input type="text" placeholder="Your Email">
                 </div>
-                <textarea>
-
-                </textarea>
-                <button type="submit">send</button>
+                <textarea placeholder="Write Massage"></textarea>
+                <button type="submit" class="form-btn">send</button>
             </form>
         </div>
+    </section>
+    <section class="copyright">
+        All rights Reserved © 2017
     </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
