--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>Document</title>
 </head>
 
@@ -22,6 +23,9 @@
                         <img src="img/logo.png" alt="My Logo">
                     </div>
                     <nav class="menu">
+                        <div class="header__btn-menu">
+                            <span></span>
+                        </div>
                         <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">About</a></li>
@@ -50,7 +54,7 @@
                     <button class="header-btn">
                         hire is now
                     </button>
-                    <span><i class="fas fa-angle-down"></i></span>
+                    <span class="angle-down"><i class="fas fa-angle-down"></i></span>
                 </div>
             </div>
         </div>
@@ -95,7 +99,7 @@
             </div>
         </div>
     </section>
-    <section class="services">
+    <!--<section class="services">
         <div class="container">
             <div class="services__title">
                 Our Services
@@ -641,10 +645,8 @@
     </section>
     <section class="copyright">
         All rights Reserved © 2017
-    </section>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    </section> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
