фдаптив секции services

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
         </div>
     </section>
-    <!--<section class="services">
+    <section class="services">
         <div class="container">
             <div class="services__title">
                 Our Services
@@ -282,7 +282,7 @@
             </div>
         </div>
     </section>
-    <section class="pricing">
+    <!--<section class="pricing">
         <div class="container">
             <div class="pricing__title">
                 Pricing Plan
