--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <title>Document</title>
@@ -212,21 +213,21 @@
                 dolore magna aliqua. Ut enim ad minim veniam,
             </div>
             <div class="works__btn-inner">
-                <a href="#" class="works__btn">
+                <button val="on" class="works__btn" filter="all">
                     ALL
-                </a>
-                <a href="#" class="works__btn">
+                </button>
+                <button val="off" class="works__btn" filter="wd">
                     WEB DESIGN
-                </a>
-                <a href="#" class="works__btn">
+                </button>
+                <button val="off" class="works__btn" filter="ui">
                     UI/UX DESIGN
-                </a>
-                <a href="#" class="works__btn">
+                </button>
+                <button val="off" class="works__btn" filter="mo">
                     MOCKUPS
-                </a>
+                </button>
             </div>
-            <div class="works__items">
-                <div class="works__item">
+            <div class="filter works__items">
+                <div filter="wd" class="works__item">
                     <a href="#">
                         <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
                                 design</span>
@@ -234,7 +235,7 @@
                         <img src="img/item_1.png" alt="">
                     </a>
                 </div>
-                <div class="works__item">
+                <div filter="ui" class="works__item">
                     <a href="#">
                         <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
                                 design</span>
@@ -242,7 +243,7 @@
                         <img src="img/item_2.png" alt="">
                     </a>
                 </div>
-                <div class="works__item">
+                <div filter="wd" class="works__item">
                     <a href="#">
                         <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
                                 design</span>
@@ -250,7 +251,7 @@
                         <img src="img/item_3.png" alt="">
                     </a>
                 </div>
-                <div class="works__item">
+                <div filter="mo" class="works__item">
                     <a href="#">
                         <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
                                 design</span>
@@ -258,7 +259,7 @@
                         <img src="img/item_4.png" alt="">
                     </a>
                 </div>
-                <div class="works__item">
+                <div filter="ui" class="works__item">
                     <a href="#">
                         <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
                                 design</span>
@@ -266,7 +267,7 @@
                         <img src="img/item_5.png" alt="">
                     </a>
                 </div>
-                <div class="works__item">
+                <div filter="mo" class="works__item">
                     <a href="#">
                         <p class="works__item_descr-title">Hand Watch<br><span class="works__item_descr-text">UI/UX
                                 design</span>
@@ -282,7 +283,7 @@
             </div>
         </div>
     </section>
-    <!--<section class="pricing">
+    <section class="pricing">
         <div class="container">
             <div class="pricing__title">
                 Pricing Plan
@@ -294,11 +295,14 @@
             <div class="pricing__plans">
                 <div class="pricing__plan">
                     <div class="pricing__plan-title">
+                        <div class="pricing__plan-bottom">
+
+                        </div>
                         <div class="pricing__name">
                             Free Trail
                         </div>
                         <div class="pricing__price">
-                            <span class="pricing__price-currency">$</span>00<span
+                            <span class="pricing__price-currency">$</span><span class="price">00</span><span
                                 class="pricing__price-time-interval">per month</span>
                         </div>
                     </div>
@@ -318,7 +322,7 @@
                             Basic
                         </div>
                         <div class="pricing__price">
-                            <span class="pricing__price-currency">$</span>50<span
+                            <span class="pricing__price-currency">$</span><span class="price">50</span><span
                                 class="pricing__price-time-interval">per month</span>
                         </div>
                     </div>
@@ -338,7 +342,7 @@
                             Ultimate
                         </div>
                         <div class="pricing__price">
-                            <span class="pricing__price-currency">$</span>99<span
+                            <span class="pricing__price-currency">$</span><span class="price">99</span><span
                                 class="pricing__price-time-interval">per month</span>
                         </div>
                     </div>
@@ -365,6 +369,7 @@
                 dolore magna aliqua. Ut enim ad minim veniam,
             </div>
             <div class="slider__inner">
+                
                 <div class="team__members">
                     <div class="team__member">
                         <img src="img/team_1.png" alt="">
@@ -386,46 +391,6 @@
                         </div>
                     </div>
                     <div class="team__member">
-                        <img src="img/team_2.png" alt="">
-                        <div class="team__member-name">
-                            John Doe
-                        </div>
-                        <div class="team__member-position">
-                            General Manager
-                        </div>
-                        <div class="team__member-icons">
-                            <a href="#" class="team__member-icon"><i class="fab fa-facebook-f"></i></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fas fa-comments"></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fab fa-dribbble"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="team__member">
-                        <img src="img/team_3.png" alt="">
-                        <div class="team__member-name">
-                            John Doe
-                        </div>
-                        <div class="team__member-position">
-                            General Manager
-                        </div>
-                        <div class="team__member-icons">
-                            <a href="#" class="team__member-icon"><i class="fab fa-facebook-f"></i></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fas fa-comments"></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fab fa-dribbble"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="team__members">
-                    <div class="team__member">
                         <img src="img/team_1.png" alt="">
                         <div class="team__member-name">
                             John Doe
@@ -444,46 +409,6 @@
                             </a>
                         </div>
                     </div>
-                    <div class="team__member">
-                        <img src="img/team_2.png" alt="">
-                        <div class="team__member-name">
-                            John Doe
-                        </div>
-                        <div class="team__member-position">
-                            General Manager
-                        </div>
-                        <div class="team__member-icons">
-                            <a href="#" class="team__member-icon"><i class="fab fa-facebook-f"></i></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fas fa-comments"></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fab fa-dribbble"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="team__member">
-                        <img src="img/team_3.png" alt="">
-                        <div class="team__member-name">
-                            John Doe
-                        </div>
-                        <div class="team__member-position">
-                            General Manager
-                        </div>
-                        <div class="team__member-icons">
-                            <a href="#" class="team__member-icon"><i class="fab fa-facebook-f"></i></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fas fa-comments"></i>
-                            </a>
-                            <a href="#" class="team__member-icon"><i class="fab fa-dribbble"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="team__members">
                     <div class="team__member">
                         <img src="img/team_1.png" alt="">
                         <div class="team__member-name">
@@ -545,7 +470,7 @@
             </div>
         </div>
     </section>
-    <section class="blog">
+    <!--<section class="blog">
         <div class="container">
             <h2 class="blog__title">Blog</h2>
             <p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
