--- a/index.html
+++ b/index.html
@@ -470,12 +470,12 @@
             </div>
         </div>
     </section>
-    <!--<section class="blog">
+    <section class="blog">
         <div class="container">
             <h2 class="blog__title">Blog</h2>
             <p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-            <article>
+            <article class="article-1">
                 <img src="img/blog_1.png" alt="" class="blog__img">
                 <div class="blog__content">
                     <h3><a href="#"> SEO Quis Vestibulum</a></h3>
@@ -489,7 +489,8 @@
                     </p>
                 </div>
             </article>
-            <article>
+            <article class="article-2">
+                    <img src="img/blog_2.png" alt="" class="blog__img">
                 <div class="blog__content">
                     <h3><a href="#"> SEO Quis Vestibulum</a></h3>
                     <div class="blog__date-category">
@@ -501,9 +502,8 @@
                         aliquip ex ea commodo consequat...
                     </p>
                 </div>
-                <img src="img/blog_2.png" alt="" class="blog__img">
             </article>
-            <article>
+            <article class="article-3">
                 <img src="img/blog_3.png" alt="" class="blog__img">
                 <div class="blog__content">
                     <h3><a href="#"> SEO Quis Vestibulum</a></h3>
@@ -570,7 +570,7 @@
     </section>
     <section class="copyright">
         All rights Reserved © 2017
-    </section> -->
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
